eDelivery SMP 5.0

- environment properties have now 'smp.' prefix
- application property: 'configuration.dir' was replaced by the environment 'smp.security.folder' property
- added new properties:
    smp.truststore.type: Truststore type as JKS/PKCS12
    smp.keystore.type: Keystore type as JKS/PKCS12
    document.restriction.allowed.certificate.types: Allowed key algorithms for certificates to be used in service metadata.Empty value means no restrictions, for other values see the java KeyFactory Algorithms for example: RSA|EC|Ed25519|Ed448.
    smp.certificate.validation.allowed.certificate.type: Allowed user certificate JCE types. Empty value means no restrictions, for other values see the java KeyFactory Algorithms for example: RSA|EC|Ed25519|Ed448.
    identifiersBehaviour.splitPattern: Regular expression with groups scheme and identifier for splitting the URN identifiers to scheme and identifier part.
- the default keystore type is now PKCS12. Set the keystore type to JKS if properties smp.truststore.type and smp.keystore.type are missing!

eDelivery SMP 4.2
- added new properties:
    smp.passwordPolicy.validationRegex: Regular expression do define password minimum complexity rules!
    smp.passwordPolicy.validationMessage: The error message shown to the user in case the password does not follow the regex put in the domibus.passwordPolicy.pattern property"
    smp.ui.authentication.types: Set list of '|' separated UI authentication types. Currently supported PASSWORD, SSO: ex. PASSWORD|SSO
    smp.automation.authentication.types: Set list of '|' separated automation authentication types (Web-Service integration). Currently supported PASSWORD, CERT: ex. PASSWORD|CERT
    smp.http.forwarded.headers.enabled to control usage of Forwarded parameters RP/LoadBalancer.
    smp.ui.session.secure: Cookie is only sent to the server when a request is made with the https: scheme (except on localhost), and therefore is more resistant to man-in-the-middle attacks.