@@ -6,3 +6,4 @@ smp.automation.authentication.external.tls.clientCert.enabled=true
 smp.truststore.password={DEC}{test123}
 smp.keystore.password={DEC}{test123}
 smp.log.folder=./logs/
+smp.automation.authentication.external.tls.SSLClientCert.enabled=true
